Fixed Mastodon embed height and leaderboard page on mobile

--- a/src/components/Dashboard/MastodonTimeline/mastodon-timeline.css
+++ b/src/components/Dashboard/MastodonTimeline/mastodon-timeline.css
@@ -34,6 +34,7 @@ html[data-theme='dark'] {
 	background: var(--bg-color);
 	scrollbar-color: var(--bg-hover-color) rgba(0, 0, 0, 0.1);
 	border-radius: 0.6em;
+	max-height: 36em;
 }
 .mt-timeline a:link,
 .mt-timeline a:active,
